--- a/.github/workflows/workflow-file-txt.yml
+++ b/.github/workflows/workflow-file-txt.yml
@@ -16,7 +16,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2
         with:
-          files: "*.txt, *.cmd*"
+          files: "*.txt"
 
       - name: File exists
         if: steps.check_files.outputs.files_exists == 'false'
