--- a/.github/workflows/workflow-file-cmd.yml
+++ b/.github/workflows/workflow-file-cmd.yml
@@ -19,6 +19,8 @@ jobs:
           files: "*.cmd*"
 
       - name: File exists
+        env:
+            fail: true
         if: steps.check_files.outputs.files_exists == 'false'
         # Only runs if all of the files exists
         run: echo Failed Successfully!
