--- a/.github/workflows/workflow-file-txt.yml
+++ b/.github/workflows/workflow-file-txt.yml
@@ -1,4 +1,4 @@
-name: "File existence check"
+name: ".txt"
 
 on: 
     push:
@@ -17,10 +17,9 @@ jobs:
         uses: andstor/file-existence-action@v2
         with:
           files: "*.txt"
+          fail: true
 
       - name: File exists
-        env:
-            fail: true
         if: steps.check_files.outputs.files_exists == 'false'
         # Only runs if all of the files exists
         run: echo Failed Successfully!
