--- a/.github/workflows/txt.yml
+++ b/.github/workflows/txt.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Check file existence
         id: check_files
-        uses: karilaa-dev/file-existence-action
+        uses: karilaa-dev/file-existence-action@v3
         with:
           files: "*.txt"
           fail: true
