--- a/.github/workflows/txt.yml
+++ b/.github/workflows/txt.yml
@@ -23,3 +23,9 @@ jobs:
         if: steps.check_files.outputs.files_exists == 'false'
         # Only runs if all of the files exists
         run: echo Failed Successfully!
+        
+      - name: Slack Notification
+        if: failure()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
