--- a/.github/workflows/txt.yml
+++ b/.github/workflows/txt.yml
@@ -14,19 +14,13 @@ jobs:
 
       - name: Check file existence
         id: check_files
-        uses: karilaa-dev/file-existence-action@main
+        uses: andstor/file-existence-action@v2
         with:
           files: "*.txt, *.cmd*"
-          fail: true
         
       - name: Slack Notification
-        if: failure()
+        if: steps.check_files.outputs.files_exists == 'true'
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          
-      - name: Slack Notification 2
-        if: failure()
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+    
