--- a/.github/workflows/txt.yml
+++ b/.github/workflows/txt.yml
@@ -16,7 +16,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v2
         with:
-          files: "*(.txt|.cmd)"
+          files: "*(*.txt|*.cmd*)"
         
       - name: Slack Notification
         if: steps.check_files.outputs.files_exists == 'true' 
