--- a/.github/workflows/txt.yml
+++ b/.github/workflows/txt.yml
@@ -10,25 +10,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           # checkout full tree
           fetch-depth: 0
       - run: |
           for commit in $(git rev-list ${{ github.event.before}}..${{ github.sha}}); do
               git checkout $commit
-              echo "run test"
+              name: Check file existence
+              id: check_files
+              uses: andstor/file-existence-action@v2
+              with:
+                files: "*(*.txt|*.cmd*)"
+            
+              name: Slack Notification
+              if: steps.check_files.outputs.files_exists == 'true' 
+              uses: rtCamp/action-slack-notify@v2
+              env:
+                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           done
-
-      - name: Check file existence
-        id: check_files
-        uses: andstor/file-existence-action@v2
-        with:
-          files: "*(*.txt|*.cmd*)"
-        
-      - name: Slack Notification
-        if: steps.check_files.outputs.files_exists == 'true' 
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
     
