--- a/.github/workflows/txt.yml
+++ b/.github/workflows/txt.yml
@@ -8,25 +8,22 @@ on:
 jobs:
   file_existence:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          # checkout full tree
+    steps: 
+      - uses: actions/checkout@v2
+        with: 
           fetch-depth: 0
-      - run: |
-          for commit in $(git rev-list ${{ github.event.before}}..${{ github.sha}}); do
-              git checkout $commit
-              name: Check file existence
-              id: check_files
-              uses: andstor/file-existence-action@v2
-              with:
-                files: "*(*.txt|*.cmd*)"
-            
-              name: Slack Notification
-              if: steps.check_files.outputs.files_exists == 'true' 
-              uses: rtCamp/action-slack-notify@v2
-              env:
-                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          done
-    
+      - name: get file changes
+        run: | 
+          git diff --name-only ${{ github.event.before }} ${{ github.event.after }}
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v2
+        with:
+          files: "*(*.txt|*.cmd*)"
+        
+      - name: Slack Notification
+        if: steps.check_files.outputs.files_exists == 'true' 
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        
