--- a/.github/workflows/txt.yml
+++ b/.github/workflows/txt.yml
@@ -8,13 +8,17 @@ on:
 jobs:
   file_existence:
     runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v2
-        with: 
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          # checkout full tree
           fetch-depth: 0
-      - name: get file changes
-        run: | 
-          git diff --name-only ${{ github.event.before }} ${{ github.event.after }}
+      - run: |
+          for commit in $(git rev-list ${{ github.event.before}}..${{ github.sha}}); do
+              git checkout $commit
+              echo "run test"
+          done
+          
       - name: Check file existence
         id: check_files
         uses: andstor/file-existence-action@v2
