--- a/.github/workflows/prohibited-files.yml
+++ b/.github/workflows/prohibited-files.yml
@@ -6,7 +6,7 @@ on:
         branches: '**'
 
 jobs:
-  file_existence:
+  prohibited_files:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
