--- a/.github/workflows/prohibited-files.yml
+++ b/.github/workflows/prohibited-files.yml
@@ -29,7 +29,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_COLOR: red
+          SLACK_COLOR: "red"
           SLACK_MESSAGE: "⛔️PROHIBITED FILES FOUND"
 
       - name: Throw Fail
