--- a/.github/workflows/prohibited-files.yml
+++ b/.github/workflows/prohibited-files.yml
@@ -14,7 +14,7 @@ jobs:
           # checkout full tree
           fetch-depth: 0
       - run: |
-          for commit in $(git rev-list ${{ github.event.before}}..${{ github.sha}}); do
+          for commit in $(git rev-list ${{ github.base_ref}}..${{ github.sha}}); do
               git checkout $commit
           done
           
